--- a/medical_form.html
+++ b/medical_form.html
@@ -9,7 +9,7 @@
         <div id="frm">
                         <h3>Medical History</h3>
 <ul>
-                <li><a class="active" href="main2.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="hello.html">News</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About</a></li>
