--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   
   <div class="a1"><h2>EFFICIENT DOCTOR PATIENT</h2></div>
   <ul class="n">
-      <li class="m"><a class="active" href="main2.html">Home</a></li>
+      <li class="m"><a class="active" href="index.html">Home</a></li>
       <li class="m"><a href="hello.html">News</a></li>
       <li class="m"><a href="contact.html">Contact</a></li>
       <li class="m"><a href="about.html">About</a></li>
