--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         <div class="a1"><h2>EFFICIENT DOCTOR PATIENT</h2></div>
             
             <ul>
-                    <li><a class="active" href="main2.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="hello.html">News</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="about.html">About</a></li>
