--- a/doctor_login.html
+++ b/doctor_login.html
@@ -13,7 +13,7 @@
     <div id="frm">
             <h3>Doctor login</h3>
             <ul>
-                        <li><a class="active" href="main2.html">Home</a></li>
+                        <li><a class="active" href="index.html">Home</a></li>
                         <li><a href="hello.html">News</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="about.html">About</a></li>
